--- a/src/Pingbot.Api/Properties/launchSettings.json
+++ b/src/Pingbot.Api/Properties/launchSettings.json
@@ -5,7 +5,9 @@
       "launchBrowser": false,
       "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",        
+        "LOG_LEVEL": "INFO",
+        "LOG_FORMAT": "TEXT"
       }
     }
   }
