add discord interaction

--- a/src/Pingbot.Api/Properties/launchSettings.json
+++ b/src/Pingbot.Api/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",        
         "LOG_LEVEL": "INFO",
-        "LOG_FORMAT": "TEXT"
+        "LOG_FORMAT": "TEXT",
+        "DISCORD_SHARDS": "1"
       }
     }
   }
